# Nav_Mapping_System

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/custom_msgs/share/custom_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/grid_fastslam/include/grid_fastslam/: grid_fastslam.hpp
install/grid_fastslam/lib/grid_fastslam/: grid_fastslam_node
install/grid_fastslam/share/grid_fastslam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mappeate_y_ubicate/share/mappeate_y_ubicate/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/odom_tools/lib/odom_tools/: delta_odom
install/odom_tools/share/odom_tools/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/custom_msgs/: CMakeLists.txt
src/grid_fastslam/: CMakeLists.txt  package.xml
src/grid_fastslam/include/grid_fastslam/: grid_fastslam.hpp
src/grid_fastslam/launch/: fastslam.launch.py
src/grid_fastslam/src/: delta_odom.cpp  grid_fastslam.cpp  main.cpp
src/mappeate_y_ubicate/: package.xml  setup.cfg  setup.py
src/mappeate_y_ubicate/launch/: launch_my_fastslam.launch.py
src/mappeate_y_ubicate/mappeate_y_ubicate/: fastslam.py  robot_functions.py
src/odom_tools/: setup.cfg  setup.py
src/state_machine/: package.xml  setup.py
src/state_machine/launch/: state_machine.launch.py
src/state_machine/maps/: custom_casa_2.yaml  my_map.yaml  my_map2.yaml
src/state_machine/state_machine/: localization.py  map_publisher.py  navigator.py  robot_functions.py
src/tools/tools/: delta_odom.py  map_saver.py
(+129 files in other folders)
